--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.13.2",
+    "@react-native-firebase/app": "^19.1.1",
+    "@react-native-firebase/dynamic-links": "^19.1.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
